--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@article) do |f| %>
+<%= form_for(@article, html: {class: 'form-horizontal'}) do |f| %>
   <% if @article.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:</h2>
@@ -11,15 +11,23 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+  <div class="field form-group">
+    <%= f.label :title, class: 'col-sm-1 control-label' %>
+    <div class="col-sm-6">
+      <%= f.text_field :title, class: 'form-control' %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
+  <br>
+  <div class="field form-group">
+    <%= f.label :body, class: 'col-sm-1 control-label' %>
+    <div class="col-sm-6">
+      <%= f.text_area :body, class: 'form-control' %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="actions form-group">
+    <div class="col-sm-offset-1 col-sm-10">
+      <%= f.submit class:"btn btn-primary"%>
+    </div>
   </div>
 <% end %>
