--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Article</h1>
+<div class="container">
+  <h1>Editing Article</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @article %> |
-<%= link_to 'Back', articles_path %>
+  <br>
+  <%= link_to 'Show', @article, class: "btn btn-success col-sm-offset-1" %>
+  <%= link_to 'Back', articles_path, class: 'btn btn-default' %>
+
+</div>
