--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,29 +1,31 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<h1>Listing Articles</h1>
+  <h1>Listing Articles</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @articles.each do |article| %>
+  <table class="table table-hover table-condensed table-responsive">
+    <thead>
       <tr>
-        <td><%= article.title %></td>
-        <td><%= article.body %></td>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Title</th>
+        <th>Body</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @articles.each do |article| %>
+        <tr>
+          <td><%= article.title %></td>
+          <td><%= article.body %></td>
+          <td><%= link_to 'Show', article, class: "btn btn-success btn-xs" %></td>
+          <td><%= link_to 'Edit', edit_article_path(article), class: "btn btn-warning btn-xs" %></td>
+          <td><%= link_to 'Destroy', article, method: :delete, class: "btn btn-danger btn-xs", data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Article', new_article_path %>
+  <br>
+
+  <%= link_to 'New Article', new_article_path, class: 'btn btn-primary' %>
+</div>
