--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Article</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', articles_path %>
+<div class="container">
+  <h1>New Article</h1>
+  <br>
+  <%= render 'form' %>
+  <br>
+  <%= link_to 'Back', articles_path, class: 'btn btn-default col-sm-offset-1' %>
+</div>
