--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -1,1 +1,47 @@
+@import "bootstrap-sprockets";
 @import "bootstrap";
+@import url(http://fonts.googleapis.com/css?family=Orbitron:700|Quantico);
+
+$main-color: #BA091E;
+
+body {
+  /* width: 100%; */
+  height: 615px;
+  background-color: $main-color;
+  font-family: Quantico;
+  /* text-shadow: black 0px 0px 2px; */
+  background: url("educator_bg.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  /* background-size: cover;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center; */
+}
+
+h1 {
+  font-family: Orbitron;
+}
+
+h3 {
+  font-family: Orbitron;
+}
+
+.article-box {
+  width: 180px;
+  height: 180px;
+  margin: 3px;
+  border-radius: 20px;
+  float: left;
+  background-color: darken($main-color, 10%);
+  text-align: center;
+}
+
+.bottom-btn {
+  clear:both;
+  position: relative;
+  margin-top: 5%;
+  float:left;
+  margin-bottom: 1cm;
+}
