--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,29 +3,16 @@
 
   <h1>Listing Articles</h1>
 
-  <table class="table table-hover table-condensed table-responsive">
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Body</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-
-    <tbody>
       <% @articles.each do |article| %>
-        <tr>
-          <td><%= article.title %></td>
-          <td><%= article.body %></td>
-          <td><%= link_to 'Show', article, class: "btn btn-success btn-xs" %></td>
-          <td><%= link_to 'Edit', edit_article_path(article), class: "btn btn-warning btn-xs" %></td>
-          <td><%= link_to 'Destroy', article, method: :delete, class: "btn btn-danger btn-xs", data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+        <div class="article-box">
+          <h3><%= link_to article.title, article %></h3>
 
+          <%= link_to 'Edit', edit_article_path(article), class: "btn btn-warning btn-xs" %>
+          <%= link_to 'Destroy', article, method: :delete, class: "btn btn-danger btn-xs", data: { confirm: 'Are you sure?' } %>
+        </div>
+      <% end %>
   <br>
 
-  <%= link_to 'New Article', new_article_path, class: 'btn btn-primary' %>
+  <%= link_to 'New Article', new_article_path, class: "btn btn-primary bottom-btn" %>
+
 </div>
