Minor changes to styling

--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -8,7 +8,8 @@ body {
   /* width: 100%; */
   height: 615px;
   background-color: $main-color;
-  font-family: Quantico;
+  font-family: Quantico, sans-serif;
+  font-size: large;
   /* text-shadow: black 0px 0px 2px; */
   background: url("educator_bg.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -21,11 +22,11 @@ body {
 }
 
 h1 {
-  font-family: Orbitron;
+  font-family: Orbitron, sans-serif;
 }
 
 h3 {
-  font-family: Orbitron;
+  font-family: Orbitron, sans-serif;
 }
 
 .article-box {
@@ -36,10 +37,11 @@ h3 {
   float: left;
   background-color: darken($main-color, 10%);
   text-align: center;
+  overflow: auto;
 }
 
 .bottom-btn {
-  clear:both;
+  clear: both;
   position: relative;
   margin-top: 5%;
   float:left;
