--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -17,11 +17,11 @@
       <%= f.text_field :title, class: 'form-control' %>
     </div>
   </div>
-  <br>
+
   <div class="field form-group">
     <%= f.label :body, class: 'col-sm-1 control-label' %>
     <div class="col-sm-6">
-      <%= f.text_area :body, class: 'form-control' %>
+      <%= f.text_area :body, class: 'form-control', rows: 10 %>
     </div>
   </div>
 
