--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,10 +1,7 @@
 <div class="container">
   <h1>Editing Article</h1>
-
-  <%= render 'form' %>
-
   <br>
-  <%= link_to 'Show', @article, class: "btn btn-success col-sm-offset-1" %>
-  <%= link_to 'Back', articles_path, class: 'btn btn-default' %>
+  <%= render 'form' %>
+  <%= link_to 'Cancel', articles_path, class: 'btn btn-default col-sm-offset-1' %>
 
 </div>
