--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,6 +2,5 @@
   <h1>New Article</h1>
   <br>
   <%= render 'form' %>
-  <br>
-  <%= link_to 'Back', articles_path, class: 'btn btn-default col-sm-offset-1' %>
+  <%= link_to 'Cancel', articles_path, class: 'btn btn-default col-sm-offset-1' %>
 </div>
