--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,4 @@
 <div class="container">
-  <p id="notice"><%= notice %></p>
 
   <p>
     <strong>Title:</strong>
@@ -13,6 +12,6 @@
     <%= @article.body %>
   </p>
 
-  <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-warning btn-xs" %>
-  <%= link_to 'Back', articles_path, class: "btn btn-default btn-xs" %>
+  <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-warning" %>
+  <%= link_to 'Back', articles_path, class: "btn btn-default" %>
 </div>
