--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,6 +16,7 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "All Articles", articles_path %></li>
         <li><%= link_to "New Article", new_article_path %></li>
+        <li><%= link_to "Shots", shots_path %></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
